--- a/Javascript Assignment 1/style.css
+++ b/Javascript Assignment 1/style.css
@@ -9,13 +9,13 @@
 }
 
 body{
-    background-color: #F8E8EE; 
+    background-color: lightblue; 
 }
 
 .game-container {
     max-width: 500px;
     margin: auto;
-    background: #e6d5e6;
+    background: lightcoral;
     padding: 20px;
     border-radius: 15px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
