--- a/Javascript Assignment 1/style.css
+++ b/Javascript Assignment 1/style.css
@@ -29,6 +29,13 @@ body{
     border-radius: 10px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
 }
+.player-box input {
+    width: 100%; 
+    max-width: 90%; 
+    box-sizing: border-box; 
+    padding: 8px; 
+    font-size: 16px; 
+}
 
 input {
     width: 100%;
