--- a/Capstone Project 1/Inventory-Management-System/Frontend/ims-frontend/src/index.css
+++ b/Capstone Project 1/Inventory-Management-System/Frontend/ims-frontend/src/index.css
@@ -5,7 +5,7 @@
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-/* Home Page Styling */
+/* Page Styling */
 /* Global Container */
 .home-container {
   background-color: #F2F2F2; /* Soft Beige */
@@ -16,7 +16,7 @@
   position: relative;
   text-align: center;
   padding: 80px 20px;
-  background: url("images/pic1.jpg") no-repeat center/cover;
+  background: url("images/cafe.jpg") no-repeat center/cover;
   border-radius: 10px;
   color: whitesmoke;
 }
@@ -1660,7 +1660,7 @@ button:hover {
 /* Dashboard Page */
 .dashboard-page {
   padding: 24px;
-  background: linear-gradient(to bottom, #F5F5DC, #E4C9A1);
+  background: white;
 }
 
 /* Button Group */
@@ -1700,6 +1700,15 @@ button:hover {
 }
 
 /* Chart Container */
+.chart-container-2{
+  padding: 20px;
+  border-radius: 12px;
+  background-color: #F5F5DC;
+  text-align: center;
+  height: 380px;
+  border: 3px solid #2C2C2C; /* Soft border */
+}
+
 .chart-container {
   padding: 20px;
   border-radius: 12px;
