--- a/Frontend/React/React-demo2/src/App.css
+++ b/Frontend/React/React-demo2/src/App.css
@@ -1,5 +1,3 @@
-/* src/App.css */
-
 body {
   background-color: #f0f2f5;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
@@ -12,7 +10,7 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 30px; /* Adds space between the component containers */
-  width: 100vw;
+  width: 100vw; /*imp*/
   padding: 40px 20px;
 }
 
